   for Wakeup Configuration if its set as FLiRS. Needs some testing (Justin)
 - Options.xml file can now live in both the System Config Path
   (/etc/openzwave for example) or the Local Application Path. Local
   Options.xml will override any System Options.xml (Justin)
 - Updated the Include Paths so we only have to specify the top level src
   directory for GCC, and the rest of the headers are specified as subdirs.
   Based on work started by Svente Karisson (Justin)
 - A few fixes for Windows Calls and various casts required to eliminate
   warnings (Svente Karisson)
 - Add a Error String if we fail to parse our Options.xml files (Justin)
 - Added a Complete Door Lock Command Class (Justin)
 - Change the Logic in the UserCode Command Class to only retrive UserCodes
   upto the first available slot (Justin)
 - Add a ValueButton to the UserCode class to refresh all UserCodes (Justin)
 - Fixed Issue 301 - Updated Aeon Recessed Door Sensor (Justin)
 - Fixed Issue 302 - New ID for Aeon Labs Door/Window Sensor (Justin)
 - Fixed Issue 306 & 304 - Updated Fibaro FGMS Config File (Justin)
 - Fixed Issue 308 - Add Zenzhou TZ65D Dual Wall Dimmer (Justin)
 - Fixed Issue 309 - Add Config File for ZWave.Me Flush Mountable Switch (Justin)
 - Fixed Issue 311 - Add Vision Siren (Justin)
 - Fixed Issue 314 - Updated Fibaro RGBW Config File (Justin)
 - Fixed Issue 318 - Updated Fibaro Wall Plug Config File (Justin)
 - Fixed Issue 321 - Updated Fibaro FGRM222 Config File (Justin)
 - Fixed Issue 324 - New Config file for Aeon Labs MiniMote (Justin)
 - Added ZWave.Me iTemp Config file thanks to Willem Burgers (Justin)
 - Added new id for Aeon Labs Micro Smart Engergy Illuminator G2 thanks to
   jmeyer (Justin)
 - Fixed Issue 329 - Update Fibaro FGD211 Config File (Alex)
 - Fixed Issue 330 - Update Fibaro FGS211 Config File (Alex)
 - Fixed Issue 331 - Update Fibaro RGBWM441 Config File (Alex)
 - Add new id for GE Duplex Receptacle (Alex) 